--- a/public/assets/profil.css
+++ b/public/assets/profil.css
@@ -60,7 +60,7 @@ body{
     margin-right: 30px;
     padding: 15px;
     max-width: 250px;
-    background: #69A2B0;
+    max-height: 370px;
     border: 4px ridge #0E103D;
     border-radius: 20px;
 }
@@ -96,6 +96,11 @@ body{
 
 .biographie{
     margin-top: 10px;
+    overflow: scroll;
+}
+
+::-webkit-scrollbar {
+    display: none;
 }
 
 .bioTxt{
@@ -107,7 +112,6 @@ body{
 /* -----------------------------TEMPS VISIONNAGE---------------------------- */
 
 .tmpsVisioClassement{
-    background: #69A2B0;
     border: 4px ridge #0E103D;
     border-radius: 20px;
     width: 250px;
@@ -235,27 +239,64 @@ body{
 
 /* ----------------------------ANIME EN COURS--------------------------- */
 
-.bandeauDesAnimsEnCours{
-    background: #0E103D;
+.lesAnimes{
+    margin-top: 20px;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
 }
 
-/* .formeBandeau{
-    transform: rotate(180deg);
+.hEnCours{
+    margin: 25px;
+    margin-bottom: 5px;
+    margin-left: 40px;
+    color: var(--cl1);
 }
 
-.formeBandeau svg{
-    height: 48px;
-    width: calc(100% + 1.3px);
+.hFinis{
+    margin: 25px;
+    margin-bottom: 5px;
+    margin-left: 40px;
+    color: var(--cl5);
 }
 
-.formeBandeau .formeBandeauFill {
-    fill: #F4F1DE;
-} */
+.hrContainer{
+    width: 40%;
+    border: 2px solid var(--cl2);
+    opacity: 1;
+}
 
 .lesAnimsEnCours{
     display: flex;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
+    flex-direction: column;
+    justify-content: flex-start;
+    background: var(--cl4);
+    border-radius: 50px 50px 0 0;
+}
+
+.containerEnCours{
+    display: flex;
+    gap: 40px;
+    padding-left: 15px;
+}
+
+.backFinis{
+    background: var(--cl4);
+}
+
+.lesAnimsFinis{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    background: var(--cl3);
+    border-radius: 50px 50px 0 0;
+    margin-top: 30px;
+}
+
+.containerFinis{
+    display: flex;
+    gap: 40px;
+    padding-left: 15px;
 }
 
 .unAnime{
@@ -263,17 +304,32 @@ body{
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
-    border: 7px ridge #F4F1DE;
-    width: 250px;
+    border: 7px ridge var(--cl1);
+    width: 280px;
     max-height: 450px;
-    margin-top: 50px;
     margin-left: 15px;
     margin-right: 15px;
     padding: 15px;
-    background: #69A2B0;
     border-radius: 10px;
-    transition: 1.5s;
-    box-shadow: 8px 8px 8px 4px rgba(0, 0, 0, 0.5);
+    box-shadow: 8px 8px 8px 4px rgba(0, 0, 0, 0.3);
+    background: var(--cl4);
+}
+
+.unAnimeEnCours{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    width: 280px;
+    max-height: 450px;
+    margin-left: 15px;
+    margin-right: 15px;
+    padding: 15px;
+    border-radius: 25px;
+    box-shadow: 8px 8px 8px 4px rgba(0, 0, 0, 0.3);
+    background: var(--cl1);
+    border-left: 4px solid var(--cl2);
+    border-right: 4px solid var(--cl2);
 }
 
 .imgCarteAnime{
@@ -292,8 +348,8 @@ body{
 .btnCarteAnime{
     border: 1px solid #000;
     padding: 5px 10px 5px 10px;
-    border-radius: 5px;
-    background: #69A2B0;
+    border-radius: 12px;
+    background: var(--cl3);
     color: #000;
     text-decoration: none;
     transition: 1.2s;
