[ADD]champ total_episodes_vus dans User

--- a/public/assets/inscription.css
+++ b/public/assets/inscription.css
@@ -71,7 +71,7 @@ body{
 .maForm{
     flex-basis: 22%;
     background: var(--cl1);
-    height: 430px;
+    min-height: 430px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -97,6 +97,7 @@ body{
 .hrTop{
     width: 80%;
     margin-top: 15px;
+    margin-bottom: 10px;
     border: 1px solid var(--cl4);
 }
 
