--- a/templates/profile/favoris.html.twig
+++ b/templates/profile/favoris.html.twig
@@ -3,4 +3,15 @@
 {% block title %}Mon profil{% endblock %}
 
 {% block body %}
+
+    {% for unStatut in statuts %}
+
+        {% if unStatut.user == user %}
+            {{ unStatut.anime.nom }}
+            <br>
+            <br>
+        {% endif %}
+
+    {% endfor %}
+
 {% endblock %}
