[ADD] backoffice + add entity

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -19,7 +19,7 @@
                 </div>
                 <div class="navEnd">
                     <a class="unOnglet" href="{{ path('app_home') }}" id="Accueil"><span>Accueil</span></a>
-                    <a class="unOnglet" href="{{ path('app_home') }}" id="Contact"><span>Contact</span></a>
+                    <a class="unOnglet" href="{{ path('app_contact') }}" id="Contact"><span>Contact</span></a>
                     <a class="unOnglet" href="{{ path('app_profile') }}" id="Profil"><span>Profil</span></a>
                     <a class="unOnglet" href="{{ path('app_logout') }}" id="Deconnexion"><span>Deconnexion</span></a>
                 </div>
