[ADD] modif anime admin

--- a/public/assets/admin.css
+++ b/public/assets/admin.css
@@ -1,12 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito&display=swap');
-/* :root{
+:root{
     --cl1: #f4f1de;
     --cl2: #ffb116;
     --cl3: #3f7caf;
     --cl4: #004792;
     --cl5: #003051;
     --cl6: #0E103D;
-} */
+}
 
 *{
     margin: 0;
