--- a/templates/admin/edit.html.twig
+++ b/templates/admin/edit.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Ajout{% endblock %}
+{% block title %}Modification{% endblock %}
 
 {% block body %}
 <link rel="stylesheet" href="/assets/admin.css">
@@ -11,7 +11,7 @@
         {# -----------------------------Ajout Anime---------------------------------- #}
         <div class="maForm">
             <div class="titreForm">
-                <h1>Ajouter un anime</h1>
+                <h1>Modifier un anime</h1>
                 <hr class="hrTop">
             </div>
             <div class="lesInputs">
@@ -41,7 +41,7 @@
             </div>
         </div>
         {# -----------------------------Ajout Genre---------------------------------- #}
-        <div class="maForm">
+        {# <div class="maForm">
             <div class="titreForm">
                 <h1>Ajouter un genre</h1>
                 <hr class="hrTop">
@@ -52,9 +52,9 @@
                     <button class="btnIModifierProfil" type="submit">Valider</button>
                 {{ form_end(formGenre) }}
             </div>
-        </div>
+        </div> #}
         {# -----------------------------Ajout Type---------------------------------- #}
-        <div class="maForm">
+        {# <div class="maForm">
             <div class="titreForm">
                 <h1>Ajouter un type</h1>
                 <hr class="hrTop">
@@ -65,6 +65,6 @@
                     <button class="btnIModifierProfil" type="submit">Valider</button>
                 {{ form_end(formType) }}
             </div>
-        </div>
+        </div> #}
     </div>
 {% endblock %}
