--- a/templates/profile/edit.html.twig
+++ b/templates/profile/edit.html.twig
@@ -29,6 +29,7 @@
                 <hr class="hrBottom">
                 <div class="redirectBottom">
                     <button class="btnIModifierProfil" type="submit">Valider</button>
+                    <a class="retourBtn" href="{{ path('app_profile') }}">Annuler</a>
                 </div>
                 {{ form_end(editForm) }}
             </div>
