--- a/public/assets/detail.css
+++ b/public/assets/detail.css
@@ -36,27 +36,11 @@ overflow:hidden;
     flex-direction: column;
 }
 
-.part2{
-    display: flex;
-    flex-basis: 25%;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-evenly;
-    padding: 15px;
-    height: 592px;
-    border-left: 4px solid var(--cl6);
-    border-right: 4px solid var(--cl6);
-    border-radius: 20px;
-    background: var(--cl1);
-    box-shadow: 0 8px 14px 0 rgba(0,0,0,0.2);
-}
-
 .flip-card {
     background-color: transparent;
     flex-basis: 70%;
     perspective: 20000px;
 }
-  
 .flip-card-inner {
     position: relative;
     width: 100%;
@@ -125,3 +109,101 @@ overflow:hidden;
 .top{
     margin-bottom: 50px;
 }
+
+.part2{
+    display: flex;
+    flex-basis: 25%;
+    justify-content: center;
+    align-items: center;
+    padding: 15px;
+    height: 592px;
+    border-left: 4px solid var(--cl6);
+    border-right: 4px solid var(--cl6);
+    border-radius: 20px;
+    background: var(--cl1);
+    box-shadow: 0 8px 14px 0 rgba(0,0,0,0.2);
+}
+
+.maForm{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    row-gap: 8%;
+    height: 100%;
+    width: 100%;
+}
+
+.titreForm{
+    color: var(--cl6);
+}
+
+.hrTop{
+    width: 90%;
+}
+
+.lesInputs{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 100%;
+    height: 50%;
+}
+
+.lesInputs input{
+    width: 20%;
+    height: 20%;
+    border-radius: 10px;
+    border: 1px solid black;
+    padding: 5px;
+    margin-bottom: 20px;
+}
+
+.lesInputs label{
+    margin-right: 30px;
+}
+
+.lesRedirections{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.redirectBottom{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.btnIModifierStatut{
+    width: 95%;
+    height: 40px;
+    border: 1px solid var(--cl1);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: medium;
+    border-radius: 10px;
+    background: var(--cl4);
+    color: var(--cl1);
+    transition: 0.5s;
+}
+
+.btnIModifierStatut:hover{
+    outline-offset: -3px;
+    outline: 4px solid var(--cl5);
+    color: green;
+    background-color: var(--cl1);
+    box-shadow: 6px 3px 3px rgba(0, 0, 0, 0.3);
+    font-weight: bold;
+    transition: 0.3s;
+}
+
+.hrBottom{
+    width: 90%;
+}
+  
